@@ -102,3 +102,4 @@ Collate:
     'get_eolid.R'
     'col_search.R'
     'get_colid.R'
+    'tp_classification.R'
