@@ -1,6 +1,7 @@
 S3method(classification,colid)
 S3method(classification,default)
 S3method(classification,eolid)
+S3method(classification,tpsid)
 S3method(classification,tsn)
 S3method(classification,uid)
 S3method(iucn_status,default)
@@ -111,6 +112,7 @@ export(taxize_capwords)
 export(tnrs)
 export(tnrs_sources)
 export(tp_acceptednames)
+export(tp_classification)
 export(tp_namedistributions)
 export(tp_namereferences)
 export(tp_search)
